--- a/events.html
+++ b/events.html
@@ -80,29 +80,13 @@ onclick="dataLayer.push({'event' : 'CLiquesCheck',
 
 <label for="myCheck">Checkbox:</label> 
 <input type="checkbox" id="myCheck" onclick="myFunction()">
-
 <p id="text" style="display:none">Checkbox is CHECKED!</p>
 
 <script src="js/script1.js"></script>
 
 <script src="js/script2.js"></script>
 
-<script>
-
-  
-  const fig = document.querySelectorAll("img")
-  
-  for(const f of fig) {
-    
-    f.addEventListener("click", function(i){
-      console.log("O banner clicado foi - TESTE B: ", f);
-    })
-    
-  }
-  
-</script>
-
-
+<script src="js/script3.js"></script>
 
 </body>
 
