--- a/events.html
+++ b/events.html
@@ -1,18 +1,12 @@
 <!DOCTYPE HTML>
 <html>
-  
 <head>
   
-<script> 
-dataLayer = [];
-</script> 
+<script src="js/datalayer.js"></script>
+
 
 <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-XXXXXXX');</script>
+<script src="js/gtm.js"></script>
 <!-- End Google Tag Manager -->
 </head>
 
