--- a/events.html
+++ b/events.html
@@ -1,15 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  
-<script src="js/datalayer.js"></script>
 
+<script src="js/datalayer.js"></script>
 
 <!-- Google Tag Manager -->
 <script src="js/gtm.js"></script>
 <!-- End Google Tag Manager -->
 </head>
-
 <body>
 
   <h3> Testando clicks em imagens </h3>
@@ -57,7 +55,6 @@ onclick="dataLayer.push({'event' : 'CLiquesBotao',
     'eventAction':'Cliques:botoes',
     'eventLabel':'Botao:position-1'});"> Clique Aqui </button>
 
-
 <h3> Testando clicks de Checkbox</h3>
 
 <input type="checkbox" id="myCheck" checked="checked" 
@@ -71,18 +68,18 @@ onclick="dataLayer.push({'event' : 'CLiquesCheck',
   <span class="checkmark"></span>
 </label>
 
-
 <label for="myCheck">Checkbox:</label> 
 <input type="checkbox" id="myCheck" onclick="myFunction()">
 <p id="text" style="display:none">Checkbox is CHECKED!</p>
 
 <script src="js/script1.js"></script>
-
 <script src="js/script2.js"></script>
-
 <script src="js/script3.js"></script>
 
+<div class="banner" src="banner1" href="/css/insert.css"> </div>
+<div class="banner" src="banner2" href="/css/insert.css"> </div>
+<div class="banner" src="banner3" href="/css/insert.css"> </div>
+<script src="js/banners.js"></script>
+
 </body>
-
-
 </html>
