--- a/events.html
+++ b/events.html
@@ -2,6 +2,13 @@
 <html>
 <head>
 
+  <style>.banner {
+    width: 100px;
+    height: 100px;
+    background-color: red;
+    border: 1px solid black;
+  }</style>
+
 <script src="js/datalayer.js"></script>
 
 <!-- Google Tag Manager -->
@@ -76,9 +83,10 @@ onclick="dataLayer.push({'event' : 'CLiquesCheck',
 <script src="js/script2.js"></script>
 <script src="js/script3.js"></script>
 
-<div class="banner" src="banner1" href="/css/insert.css"> </div>
-<div class="banner" src="banner2" href="/css/insert.css"> </div>
-<div class="banner" src="banner3" href="/css/insert.css"> </div>
+<div class="banner" src="banner1"> </div>
+<div class="banner" src="banner2"> </div>
+<div class="banner" src="banner3"> </div>
+
 <script src="js/banners.js"></script>
 
 </body>
